Use Apache Commons Codec for decoding base 64; switch to httpclient instead of httpasyncclient